Flere sonarfikser til regelrepo